2003-03-11  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* parser/parser.y :

	  - Changed printf() to fprintf(stderr).

	* kb/symtab.cpp :
	* kb/symtab.h :
	* kb/kb.cpp :

	  - Constants true and false are now "built-in" the symbol table.
	    This is to avoid allocating new memory for the constants. Now
	    memory is allocated once for these and only a reference is passed
	    around.

2003-03-10  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.cpp :
	* kb/kb.h :
	* parser/parser.y :

	  - Added initial state list.

	* common/list.cpp :

	  - List debug output will only be displayed when the list is
	    given a name.

	* parser/parser.y :

	  - Added code to store ground expressions.

	  - Duplicate atoms are ignored and only stored once.

2003-03-07  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.cpp :

	  - negate_atom() now works properly.

	  - Fixed decode_atom().

	* parser/parser.y :

	  - Added debug code to print out encoded and decoded ground atoms.

2003-03-06  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/vlad.h :

	  - Added true/false string.

	* kb/kb.h :
	* kb/kb.cpp :

	  - Added decode_atom() function

2003-03-05  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/Makefile.in :
	* common/numberlist.h :
	* common/numberlist.cpp :

	  - Added a number list class to be used initially as ground
	    expressions.

	* samples/atomtest :

	  - Added negative atoms.

	* kb/kb.h :
	* kb/kb.cpp :
	* parser/parser.y :

	  - Added provisions for negative atoms.

	* common/list.h :
	* common/list.cpp :

	  - Added a tail pointer in the list to allow quick access to the
	    other end. Also, items are now inserted at the end of the tail
	    instead of the head. This allows retrieval of items in the right
	    order.

2003-03-04  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* parser/parser.y :

	  - Removed the add_identifier() function. Less neater but at
	    least we make no exit() calls.

	* kb/kb.cpp :
	* kb/kb.h :
	* parser/parser.y :
